rotation alert set

--- a/love.html
+++ b/love.html
@@ -26,5 +26,8 @@
       <h1>I Love You Too</h1>
       <h2>Happy Valentine's Day</h2>
     </div>
+    <script>
+      alert = "rotate your phone";
+    </script>
   </body>
 </html>
