--- a/love.html
+++ b/love.html
@@ -27,7 +27,7 @@
       <h2>Happy Valentine's Day</h2>
     </div>
     <script>
-      alert("rotate your phone");
+      alert("Rotate Your Device");
     </script>
   </body>
 </html>
