--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <div class="box">
-      <h1 class="title">This website is designed for you my nina</h1>
-      <h1>Do you love me?</h1>
-      <button class="yes"><a href="./love.html">Yes</a></button>
-      <button class="No">No</button>
+      <div class="inner-box">
+        <h1 class="title">
+          This website is specially designed for you my love
+        </h1>
+        <h1>Do you love me?</h1>
+        <button class="yes"><a href="./love.html">Yes</a></button>
+        <button class="No">No</button>
+      </div>
     </div>
-    <script></script>
   </body>
 </html>
