--- a/love.html
+++ b/love.html
@@ -6,28 +6,34 @@
     <title>Happy Valentine's Day</title>
     <style>
       body {
-        background: url(https://imgs.search.brave.com/NUcBhp-ZwRnodEE9Q09p5ppIICNlHj1QGCwlAWPNC2U/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pMC53/cC5jb20vd3d3LmVu/dGVydGFpbm1lbnRt/ZXNoLmNvbS93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyMi8wMS9h/dHRyYWN0ZWQtdG8t/eW91LWdpZi1mb3It/dmFsZW50aW5lcy1k/YXkuZ2lmP3Jlc2l6/ZT00ODAsMzIwJnNz/bD0x.gif);
+        background-color: rgb(192, 108, 29);
         height: 100vh;
         background-repeat: no-repeat;
         background-size: cover;
+      }
+      img {
+        border-radius: 20px;
+        width: 20em;
+        transition: all;
       }
       .box {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        color: rgb(211, 17, 27);
+        color: rgb(103, 216, 50);
         text-align: center;
       }
     </style>
   </head>
   <body>
     <div class="box">
+      <img
+        src="https://imgs.search.brave.com/NUcBhp-ZwRnodEE9Q09p5ppIICNlHj1QGCwlAWPNC2U/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pMC53/cC5jb20vd3d3LmVu/dGVydGFpbm1lbnRt/ZXNoLmNvbS93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyMi8wMS9h/dHRyYWN0ZWQtdG8t/eW91LWdpZi1mb3It/dmFsZW50aW5lcy1k/YXkuZ2lmP3Jlc2l6/ZT00ODAsMzIwJnNz/bD0x.gif"
+        alt=""
+      />
       <h1>I Love You Too</h1>
       <h2>Happy Valentine's Day</h2>
     </div>
-    <script>
-      alert("Rotate Your Device");
-    </script>
   </body>
 </html>
