background size updated

--- a/love.html
+++ b/love.html
@@ -13,7 +13,7 @@
       }
       img {
         border-radius: 20px;
-        width: 20em;
+        width: 15em;
         transition: all;
       }
       .box {
@@ -33,7 +33,7 @@
         alt=""
       />
       <h1>I Love You Too</h1>
-      <h2>Happy Valentine's Day</h2>
+      <h2>My Valentine</h2>
     </div>
   </body>
 </html>
