--- a/birthday.html
+++ b/birthday.html
@@ -81,7 +81,7 @@
       <button id="surpriseBtn">Click for a Surprise 🎁</button>
       <div id="surprise" class="hidden">
         <img
-          src="./images/WhatsApp Image 2025-01-13 at 12.48.25 AM.jpeg"
+          src="./images/img.jpeg"
           alt="Happy Birthday Vyshnavi"
         />
         <p>Here’s to another year of being awesome! 🌟</p>
